# Parcial3/Swagger/routes/lec2023.js
@@ -87,4 +87,113 @@ router.get('/:idEquipo', validarIdEquipo, async (req, res) => {
   }
 });
 
+/**
+ * @swagger
+ * /lec2023:
+ *   get:
+ *     summary: Obtiene todos los equipos.
+ *     tags: [Equipos]
+ *     responses:
+ *       200:
+ *         description: Retorna la lista de equipos.
+ *       500:
+ *         description: Error en el servidor.
+ */
+router.get('/', async (req, res) => {
+  try {
+    const connection = await getDatabaseConnection();
+    const [results, fields] = await connection.execute('SELECT * FROM equipo');
+    res.json(results);
+  } catch (error) {
+    res.status(500).json({ error: 'Error en el servidor' });
+  }
+});
+
+/**
+ * @swagger
+ * /lec2023:
+ *   post:
+ *     summary: Crea un nuevo equipo.
+ *     tags: [Equipos]
+ *     requestBody:
+ *       description: Datos del equipo a crear.
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               nombre:
+ *                 type: string
+ *                 description: Nombre del equipo.
+ *               acronimo:
+ *                 type: string
+ *                 description: Acrónimo del equipo.
+ *               pais:
+ *                 type: string
+ *                 description: País del equipo.
+ *     responses:
+ *       200:
+ *         description: Equipo creado exitosamente.
+ *       400:
+ *         description: Faltan campos obligatorios en la solicitud.
+ *       500:
+ *         description: Error en el servidor.
+ */
+router.post('/', async (req, res) => {
+  try {
+    const { nombre, acronimo, pais } = req.body;
+    if (!nombre || !acronimo || !pais) {
+      return res.status(400).json({ mensaje: "Faltan campos obligatorios en la solicitud" });
+    }
+
+    const connection = await getDatabaseConnection();
+    const sentenciaSQL = `INSERT INTO equipo (nombre, acronimo, pais) VALUES (?, ?, ?)`;
+    const [results, fields] = await connection.execute(sentenciaSQL, [nombre, acronimo, pais]);
+    res.json(results);
+  } catch (error) {
+    res.status(500).json({ error: 'Error en el servidor' });
+  }
+});
+
+/**
+ * @swagger
+ * /lec2023/{idEquipo}:
+ *   delete:
+ *     summary: Elimina un equipo por su ID.
+ *     tags: [Equipos]
+ *     parameters:
+ *       - in: path
+ *         name: idEquipo
+ *         required: true
+ *         description: ID del equipo a eliminar.
+ *         schema:
+ *           type: integer
+ *     responses:
+ *       200:
+ *         description: Equipo eliminado exitosamente.
+ *       404:
+ *         description: El equipo no fue encontrado.
+ *       500:
+ *         description: Error en el servidor.
+ */
+router.delete('/:idEquipo', validarIdEquipo, async (req, res) => {
+  try {
+    const connection = await getDatabaseConnection();
+    const [results, fields] = await connection.execute(`DELETE FROM equipo WHERE id = ?`, [req.params.idEquipo]);
+
+    if (results.affectedRows === 1) {
+      res.json({
+        resultado: 'Equipo eliminado'
+      });
+    } else {
+      res.status(404).json({
+        resultado: "El equipo no fue encontrado"
+      });
+    }
+  } catch (error) {
+    res.status(500).json({ error: 'Error en el servidor' });
+  }
+});
+
 module.exports = { router, validarIdEquipo };
